--- a/app/views/questions/_match_table.html.erb
+++ b/app/views/questions/_match_table.html.erb
@@ -74,6 +74,9 @@
           <th class = "mytooltip"> modified+
             <span class = "tooltiptext" > Mark this if the question is modified in a specific way. </span>
           </th>
+          <th class = "mytooltip"> clear
+            <span class = "tooltiptext" > Clear modified+ settings. </span>
+          </th>
           <th class = "mytooltip"> q_p
             <span class = "tooltiptext" > Question Phrasing Changed. </span>
           </th>
@@ -109,21 +112,21 @@
           <td class="<%= "bghicol" if mq.match_type == nil %>">
             <%# identical: %>
             <%= radio_button_tag  "questions[#{mq.matching_question_id}][match_type]",
-            "", false, onclick: "matching_logic(#{q.object.id}, #{mq.matching_question_id}, '');"
+            :unknown, false, onclick: "matching_new_logic(#{mq.matching_question_id}, '');"
             %>
           </td>
           <!-- identical -->
           <td class="<%= "bghicol" if mq.match_type == 0 %>">
             <%# identical: %>
             <%= radio_button_tag  "questions[#{mq.matching_question_id}][match_type]",
-            "0", false, onclick: "matching_logic(#{q.object.id}, #{mq.matching_question_id}, 0);"
+            :identical, false, onclick: "matching_new_logic(#{mq.matching_question_id}, 0);"
             %>
           </td>
           <!-- modified -->
           <td class="<%= "bghicol" if mq.match_type == 1 %>">
             <%# modified %>
             <%= radio_button_tag "questions[#{mq.matching_question_id}][match_type]",
-              "1", false, onclick: "matching_logic(#{q.object.id}, #{mq.matching_question_id}, 1);"
+              :modified, false, onclick: "matching_new_logic(#{mq.matching_question_id}, 1);"
             %>
           </td>
 
@@ -131,11 +134,16 @@
           <td class="<%= "bghicol" if mq.match_type == 2 %>">
             <%# modified+ %>
             <%= radio_button_tag "questions[#{mq.matching_question_id}][match_type]",
-              "2", false, onclick: "matching_logic(#{q.object.id}, #{mq.matching_question_id}, 2);"
+              :modified_plus, false, onclick: "matching_new_logic(#{mq.matching_question_id}, 2);"
             %>
           </td>
 
-
+          <td>
+            <%= check_box_tag "questions[#{q.object.id}][set_clear]",
+              1,
+              checked = false,
+              onclick: "matching_new_logic(#{mq.matching_question_id}, 'clear');"%>
+          </td>
           <!-- modified types -->
           <% # iterate through a hash from names of the modified+ match fields to their short codes
              {'changed_question_phrasing'   => 'q_p',
@@ -149,11 +157,11 @@
               'changed_other'               => 'o'
             }.each do |field_name, field_code| %>
             <td class="<%= "bghicol" if mq[field_name] == 1%>">
-              <%= check_box_tag "questions[#{q.object.id}][set_changed_#{field_code}]",
+              <%= check_box_tag "questions[#{q.object.id}][set_#{field_code}]",
                 # toggle: we are sending 1 if the checkbox is currently unchecked, and 0 if it's currently checked
                 mq[field_name] == 1 ? 0 : 1,
                 false,
-                onclick: "matching_logic(#{q.object.id}, #{mq.matching_question_id}, '+');"%>
+                onclick: "matching_new_logic(#{mq.matching_question_id}, '+');"%>
             </td>
           <% end # {}.each do |field_name, field_code| %>
         </tr>
