course#index now shows number of possible matches per course
Using SQL joins and SQL aggregates in an ugly way that is probably not the right way to do this with ActiveRecord. But, the performance is vastly better letting the database act like an actual database.

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -46,7 +46,7 @@
         <%= to_s_fraction(@class_period_updated_counts[course.id]) %>
       </td>
       <td id="match_<%="#{course.id}"%>"> </td>
-      <td id="possible_match_<%="#{course.id}"%>"> </td>
+      <td id="possible_match_<%="#{course.id}"%>"> <%= @course_match_hash[course.id] %> </td>
       <td id="nonmatch_<%="#{course.id}"%>"> </td>
     </tr>
   <% end %>
