--- a/app/assets/stylesheets/clusters.scss
+++ b/app/assets/stylesheets/clusters.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the Clusters controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.clusterTable {
+  margin: auto;
+  border: 1px solid black;
+  border-collapse: collapse;
+  overflow-x: scroll;
+  //display: block;
+  width: fit-content;
+  max-width: 100%;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, .1);
+}
+
+.clusterTable th, td {
+  border: 1px solid black;
+}
+
+.clusterImg {
+  width: 400px;
+}
+
+.clusterImg2 {
+  width: 300px;
+}
