--- a/app/views/clusters/show.html.erb
+++ b/app/views/clusters/show.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 Cluster including Question with ID <%= params[:id] %>
-<table border=1>
+<table class="clusterTable">
   <tr>
     <th> ID </th>
     <th> Link to <br> Course </th>
@@ -24,8 +24,6 @@ Cluster including Question with ID <%= params[:id] %>
 
 <% @cluster_show.each do |question| %>
 <%= fields_for "questions[]", question do |q| %>
-<%# class_period = ClassPeriod.find_by(id: question.class_period_id) %>
-<%# course = Course.find_by(id: class_period.course_id) %>
 <tr>
   <td align="center"> <b> <%= link_to question.id, question_path(question.id) %> </b> </td>
   <td align="center"> <%=link_to question.class_period.course.name, course_path(question.class_period.course.id)%>  </td>
@@ -34,53 +32,54 @@ Cluster including Question with ID <%= params[:id] %>
    </td>
   <td align="center"> <b> <%= question.question_index %> </b> </td>
   <td align="center"> <%=link_to question.class_period.name, class_period_path(question.class_period.id)   %>  </td>
-  <td class="imagecolumn">
+  <td>
     <% question_img_url = "https://s3.amazonaws.com/iclickerviewer/%s/Images/%s_Q%d.jpg" %
       [question.class_period.course.folder_name, question.class_period.session_code, question.question_index]
     %>
-    <%= image_tag(question_img_url, {:class => "myImg", :id => "#{question.id}"}) %>
+    <%= image_tag(question_img_url, {:class => "clusterImg", :id => "#{question.id}"}) %>
   </td>
   <td>
     <% if !@cluster_hash[question.id].empty? %>
     <table border=1>
       <tr>
         <% @cluster_hash[question.id].each do |match| %>
-          <th> QID </th>
-          <th> Year <br> Term </th>
+          <th> Year & Term </th>
+          <th> Is Match? </th>
+          <th> Match Type? </th>
+          <th> &nbsp; &nbsp; </th>
         <% end %>
       </tr>
       <tr>
         <% @cluster_hash[question.id].each do |match| %>
-        <td> <%= match.id %> </td>
         <td>
           <%= "#{match.matched_question.class_period.course.term} #{match.matched_question.class_period.course.year}" %>
         </td>
+        <td>
+          <%= is_match_str(match.is_match)%>
+        </td>
+        <td>
+          other
+        </td>
+        <td></td>
         <% end %>
       </tr>
       <tr>
         <% @cluster_hash[question.id].each do |match| %>
-          <td colspan="2" class="imagecolumn">
+          <td colspan="3" class="imagecolumn">
             <% question_img_url = "https://s3.amazonaws.com/iclickerviewer/%s/Images/%s_Q%d.jpg" %
               [match.matched_question.class_period.course.folder_name, match.matched_question.class_period.session_code, match.matched_question.question_index]
             %>
-            <%= image_tag(question_img_url, :class => "myImg") %>
+            <%= image_tag(question_img_url, :class => "clusterImg2") %>
             <%= button_tag "cmpimg",
               { :type => "button",
                 :onclick => "compare_images('#{question_img_url}', '#{match.question_id}')" } %>
           </td>
+          <td></td>
         <% end %>
       </tr>
     </table>
     <% end %>
   </td>
-  <!--
-  <td class="imagecolumn">
-    <% barchart_img_url = "https://s3.amazonaws.com/iclickerviewer/%s/Images/%s_C%d.jpg" %
-      [question.class_period.course.folder_name, question.class_period.session_code, question.question_index]
-    %>
-    <%= image_tag(barchart_img_url, :class => "myImg") %>
-  </td>
-  -->
 </tr>
 <% end # fields_for %>
 <% end # foreach %>
