--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -67,7 +67,7 @@ Actual matches
 
   <hr>
   <h1>
-  Disordered matches
+  "Skip" matches (disordered)
   </h1>
   <%= render partial: 'match_table',
     locals: {:potential_matches => @disorderly_matches,
