--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -338,6 +338,9 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
           <th class = "mytooltip">i_l
             <span class = "tooltiptext" > Info Layout Changed. </span>
           </th>
+          <th class = "mytooltip">i_a
+            <span class = "tooltiptext" > Info Added to Layout. </span>
+          </th>
           <th class = "mytooltip"> a_p
             <span class = "tooltiptext" > Answers Phrasing Changed. </span>
           </th>
@@ -349,6 +352,9 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
           </th>
           <th class = "mytooltip"> a_t
             <span class = "tooltiptext" > Answer Type Changed (from true false to anota, etc). </span>
+          </th>
+          <th class = "mytooltip"> s_p
+            <span class = "tooltiptext" > Slide Presentation (theme, colors, background, font size, etc). </span>
           </th>
           <th class = "mytooltip"> other
             <span class = "tooltiptext" > There is a specific change made that we don't have a category for yet.. </span>
@@ -390,14 +396,17 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 
           <!-- modified types -->
           <% # iterate through a hash from names of the modified+ match fields to their short codes
+          # TODO create a global helper method that produces this hash!
              {'changed_question_phrasing'   => 'q_p',
               'changed_question_values'     => 'q_v',
               'changed_info_phrasing'       => 'i_p',
               'changed_info_layout'         => 'i_l',
+              'changed_info_added'          => 'i_a',
               'changed_answers_phrasing'    => 'a_p',
               'changed_answers_values'      => 'a_v',
               'changed_answers_order'       => 'a_o',
               'changed_answers_type'        => 'a_t',
+              'changed_slide_presentation'  => 's_p',
               'changed_other'               => 'o'
             }.each do |field_name, field_code| %>
             <td class="<%= "bghicol" if mq[field_name] == 1%>">
@@ -434,7 +443,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
             <%= radio_button_tag "questions[#{q.object.id}][match_type]", :modified_plus, false, onclick: "matching_new_logic(#{q.object.id}, 2);" %>
           </td>
           <!-- for loop to create checkboxes for modified+ matches -->
-          <% ['q_p', 'q_v', 'i_p', 'i_l', 'a_p', 'a_v', 'a_o', 'a_t', 'o'].each do |field_code| %>
+          <% ['q_p', 'q_v', 'i_p', 'i_l', 'i_a', 'a_p', 'a_v', 'a_o', 'a_t', 's_p', 'o'].each do |field_code| %>
             <td>
               <%= check_box_tag "questions[#{q.object.id}][set_#{field_code}]",
                 "1", false, onclick: "matching_new_logic(#{q.object.id}, '+');" %>
