factored modified+ table headers into an HTML partial

--- a/app/views/questions/_match_table.html.erb
+++ b/app/views/questions/_match_table.html.erb
@@ -73,50 +73,9 @@
           <th class = "mytooltip"> unknown
             <span class = "tooltiptext" > Mark this if the question match type is unknown. </span>
           </th>
-          <th class = "mytooltip"> identical
-            <span class = "tooltiptext" > Mark this if the question is identical. </span>
-          </th>
-          <th class = "mytooltip"> modified
-            <span class = "tooltiptext" > Mark this if the question is modified, but you're not sure how. </span>
-          </th>
-          <th class = "mytooltip"> modified+
-            <span class = "tooltiptext" > Mark this if the question is modified in a specific way. </span>
-          </th>
+          <%= render partial: 'modified_plus_header' %>
           <th class = "mytooltip"> clear
             <span class = "tooltiptext" > Clear modified+ settings. </span>
-          </th>
-          <th class = "mytooltip"> q_p
-            <span class = "tooltiptext" > Question Phrasing Changed. </span>
-          </th>
-          <th class = "mytooltip"> q_v
-            <span class = "tooltiptext" > Question Values Changed. </span>
-          </th>
-          <th class = "mytooltip"> i_p
-            <span class = "tooltiptext" > Info Phrasing Changed. </span>
-          </th>
-          <th class = "mytooltip">i_l
-            <span class = "tooltiptext" > Info Layout Changed. </span>
-          </th>
-          <th class = "mytooltip">i_a
-            <span class = "tooltiptext" > Info Added to Layout. </span>
-          </th>
-          <th class = "mytooltip"> a_p
-            <span class = "tooltiptext" > Answers Phrasing Changed. </span>
-          </th>
-          <th class = "mytooltip"> a_v
-            <span class = "tooltiptext" > Answer Values Changed. </span>
-          </th>
-          <th class = "mytooltip"> a_o
-            <span class = "tooltiptext" > Answer Order Changed. </span>
-          </th>
-          <th class = "mytooltip"> a_t
-            <span class = "tooltiptext" > Answer Type Changed (from true false to anota, etc). </span>
-          </th>
-          <th class = "mytooltip"> s_p
-            <span class = "tooltiptext" > Slide Presentation (theme, colors, background, font size, etc). </span>
-          </th>
-          <th class = "mytooltip"> other
-            <span class = "tooltiptext" > There is a specific change made that we don't have a category for yet.. </span>
           </th>
         </tr>
 
@@ -152,12 +111,6 @@
             %>
           </td>
 
-          <td>
-            <%= check_box_tag "questions[#{q.object.id}][set_clear]",
-              1,
-              checked = false,
-              onclick: "matching_new_logic(#{mq.matching_question_id}, 'clear');"%>
-          </td>
           <!-- modified types -->
           <% # iterate through a hash from names of the modified+ match fields to their short codes
              get_modified_plus_category_hash.each do |field_name, field_code| %>
@@ -169,6 +122,12 @@
                 onclick: "matching_new_logic(#{mq.matching_question_id}, '+');"%>
             </td>
           <% end # {}.each do |field_name, field_code| %>
+          <td>
+            <%= check_box_tag "questions[#{q.object.id}][set_clear]",
+              1,
+              checked = false,
+              onclick: "matching_new_logic(#{mq.matching_question_id}, 'clear');"%>
+          </td>
         </tr>
         <%# end # matching_questions.each do |mq| %>
       </table>
