--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -316,55 +316,12 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
           <th class = "mytooltip"> qid
             <span class = "tooltiptext" > The question id of the matching question. </span>
           </th>
-
-          <th class = "mytooltip"> identical
-            <span class = "tooltiptext" > Mark this if the question is identical. </span>
-          </th>
-          <th class = "mytooltip"> modified
-            <span class = "tooltiptext" > Mark this if the question is modified, but you're not sure how. </span>
-          </th>
-          <th class = "mytooltip"> modified+
-            <span class = "tooltiptext" > Mark this if the question is modified in a specific way. </span>
-          </th>
-          <th class = "mytooltip"> q_p
-            <span class = "tooltiptext" > Question Phrasing Changed. </span>
-          </th>
-          <th class = "mytooltip"> q_v
-            <span class = "tooltiptext" > Question Values Changed. </span>
-          </th>
-          <th class = "mytooltip"> i_p
-            <span class = "tooltiptext" > Info Phrasing Changed. </span>
-          </th>
-          <th class = "mytooltip">i_l
-            <span class = "tooltiptext" > Info Layout Changed. </span>
-          </th>
-          <th class = "mytooltip">i_a
-            <span class = "tooltiptext" > Info Added to Layout. </span>
-          </th>
-          <th class = "mytooltip"> a_p
-            <span class = "tooltiptext" > Answers Phrasing Changed. </span>
-          </th>
-          <th class = "mytooltip"> a_v
-            <span class = "tooltiptext" > Answer Values Changed. </span>
-          </th>
-          <th class = "mytooltip"> a_o
-            <span class = "tooltiptext" > Answer Order Changed. </span>
-          </th>
-          <th class = "mytooltip"> a_t
-            <span class = "tooltiptext" > Answer Type Changed (from true false to anota, etc). </span>
-          </th>
-          <th class = "mytooltip"> s_p
-            <span class = "tooltiptext" > Slide Presentation (theme, colors, background, font size, etc). </span>
-          </th>
-          <th class = "mytooltip"> other
-            <span class = "tooltiptext" > There is a specific change made that we don't have a category for yet.. </span>
-          </th>
+          <%= render partial: 'modified_plus_header' %>
           <th class = "mytooltip"> delete?
             <span class = "tooltiptext" > Delete this matching question record from the database. </span>
           </th>
         </tr>
         <% MatchingQuestion.where(question_id: q.object.id, :is_match => [1,2]).each do |mq| %>
-
 
         <tr align="center">
           <td>
